--- a/templates/games.html
+++ b/templates/games.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
 </head>
 <body>
     {% for game in games %}
@@ -12,8 +9,8 @@
       {{game.publisher}}
       {{game.platform_name}}
       {{game.genre}}
-      {{game.rating(/10)}}
-      {{game.multiplayer?}}
+      {{game.rating}}
+      {{game.multiplayer}}
       {{game.release_year}}
     {% endfor %}
 </body>
