--- a/templates/games.html
+++ b/templates/games.html
@@ -1,12 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
-    {% for game in games %}
-      {{game.game_name}}
-      {{game.publisher}}
-      {{game.platform_name}}
-      {{game.genre}}
-      {{game.rating}}
-      {{game.multiplayer}}
-      {{game.release_year}}
-    {% endfor %}
+{% for game in games %}
+{{game.game_name}}
+{{game.publisher}}
+{{game.platform_name}}
+{{game.genre}}
+{{game.rating}}
+{{game.multiplayer}}
+{{game.release_year}}
+{% endfor %}
+<div class="row">
+	<div class="col s12 m3">
+		<div class="card blue-grey darken-1">
+			<div class="card-content white-text">
+				<span class="card-title">Card Title</span>
+				<p>I am a very simple card. I am good at containing small bits of information.
+					I am convenient because I require little markup to use effectively.lorem50
+                    I am a very simple card. I am good at containing small bits of information.
+					I am convenient because I require little markup to use effectively.lorem50
+                    I am a very simple card. I am good at containing small bits of information.
+					I am convenient because I require little markup to use effectively.lorem50
+                    I am a very simple card. I am good at containing small bits of information.
+					I am convenient because I require little markup to use effectively.lorem50
+                    I am a very simple card. I am good at containing small bits of information.
+					I am convenient because I require little markup to use effectively.lorem50
+                    I am a very simple card. I am good at containing small bits of information.
+					I am convenient because I require little markup to use effectively.lorem50</p>
+			</div>
+			<div class="card-action">
+				<a href="#">This is a link</a>
+				<a href="#">This is a link</a>
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
