--- a/templates/games.html
+++ b/templates/games.html
@@ -8,30 +8,44 @@
 {{game.rating}}
 {{game.multiplayer}}
 {{game.release_year}}
+{{game.description}}
 {% endfor %}
-<div class="row">
-	<div class="col s12 m3">
-		<div class="card blue-grey darken-1">
-			<div class="card-content white-text">
-				<span class="card-title">Card Title</span>
-				<p>I am a very simple card. I am good at containing small bits of information.
-					I am convenient because I require little markup to use effectively.lorem50
-                    I am a very simple card. I am good at containing small bits of information.
-					I am convenient because I require little markup to use effectively.lorem50
-                    I am a very simple card. I am good at containing small bits of information.
-					I am convenient because I require little markup to use effectively.lorem50
-                    I am a very simple card. I am good at containing small bits of information.
-					I am convenient because I require little markup to use effectively.lorem50
-                    I am a very simple card. I am good at containing small bits of information.
-					I am convenient because I require little markup to use effectively.lorem50
-                    I am a very simple card. I am good at containing small bits of information.
-					I am convenient because I require little markup to use effectively.lorem50</p>
-			</div>
-			<div class="card-action">
-				<a href="#">This is a link</a>
-				<a href="#">This is a link</a>
+<ul class="collapsible">
+	{% for game in games %}
+	<div class="row">
+		<div class="col s12 m4">
+			<div class="card blue-grey darken-1">
+				<div class="card-content white-text">
+					<span class="card-title">
+                    <img src = "{{game.image}}" width="300" height = "400" >
+                      <h4>{{game.game_name}}</h4>
+                    </span>
+					<div class="publisher">
+						<h6>Publisher: {{game.publisher}}</h6>
+					</div>
+                    <div class="year">
+                      <h6>Release Year: {{game.release_year}}
+                    </div>
+                    <div class="genre">
+                      <h6>Genre: {{game.genre}}</h6>
+                    </div>
+                    <div class="platform">
+                      <h6>Platform Used: {{game.platform_name}}</h6>
+                    </div>
+                    <div class="multiplayer">
+                     <h6>Is Multiplayer? {{game.multiplayer}}</h6>
+                    </div>
+                    <div class="rating">
+                     <h6> Rating (/10): {{game.rating}}</h6>
+                    </div>
+                    <div class="description">
+					  <p>{{game.description}}</p>
+                    </div>
+				</div>
+                <button>Edit Me</button>
 			</div>
 		</div>
 	</div>
-</div>
+	{% endfor %}
+</ul>
 {% endblock %}
