--- a/templates/games.html
+++ b/templates/games.html
@@ -10,42 +10,50 @@
 {{game.release_year}}
 {{game.description}}
 {% endfor %}
-<ul class="collapsible">
+<div class="row">
 	{% for game in games %}
-	<div class="row">
-		<div class="col s12 m4">
-			<div class="card blue-grey darken-1">
-				<div class="card-content white-text">
-					<span class="card-title">
-                    <img src = "{{game.image}}" width="300" height = "400" >
-                      <h4>{{game.game_name}}</h4>
-                    </span>
-					<div class="publisher">
-						<h6>Publisher: {{game.publisher}}</h6>
-					</div>
-                    <div class="year">
-                      <h6>Release Year: {{game.release_year}}
-                    </div>
-                    <div class="genre">
-                      <h6>Genre: {{game.genre}}</h6>
-                    </div>
-                    <div class="platform">
-                      <h6>Platform Used: {{game.platform_name}}</h6>
-                    </div>
-                    <div class="multiplayer">
-                     <h6>Is Multiplayer? {{game.multiplayer}}</h6>
-                    </div>
-                    <div class="rating">
-                     <h6> Rating (/10): {{game.rating}}</h6>
-                    </div>
-                    <div class="description">
-					  <p>{{game.description}}</p>
-                    </div>
+
+	<div class="col s12 m4">
+		<div class="card blue-grey darken-1">
+			<div class="card-content white-text">
+				<span class="card-title">
+                  <img src = "{{game.image}}" width="300" height = "400" />
+                  <h4>
+                    <i class="material-icons">videogame_asset</i>
+                    {{game.game_name}}
+                  </h4>
+                </span>
+				<div class="publisher">
+				  <h6>Publisher: {{game.publisher}}</h6>
 				</div>
-                <button>Edit Me</button>
+                <div class="year">
+                  <h6>
+                    <i class="material-icons">calendar_today</i>
+                    Release Year: {{game.release_year}}
+                  </h6>
+                </div>
+                <div class="genre">
+                  <h6>Genre: {{game.genre}}</h6>
+                </div>
+                <div class="platform">
+                <i class="fas fa-tv"></i>
+                  <h6>Platform Used: {{game.platform_name}}</h6>
+                </div>
+                <div class="multiplayer">
+                  <h6>Is Multiplayer? {{game.multiplayer}}</h6>
+                </div>
+                <div class="rating">
+                  <h6> Rating (/10): {{game.rating}}</h6>
+                </div>
+                <div class="description">
+			      <p>{{game.description}}</p>
+                </div>
+			</div>
+			<div class="card-action">
+				<a href="#"><button>Edit Game Details</button></a>
 			</div>
 		</div>
 	</div>
-	{% endfor %}
-</ul>
+</div>
+{% endfor %}
 {% endblock %}
