--- a/templates/games.html
+++ b/templates/games.html
@@ -1,51 +1,56 @@
 {% extends 'base.html' %}
 {% block content %}
-{% for game in games %}
-{{game.game_name}}
-{{game.publisher}}
-{{game.platform_name}}
-{{game.genre}}
-{{game.rating}}
-{{game.multiplayer}}
-{{game.release_year}}
-{{game.description}}
-{% endfor %}
 <div class="row">
 	{% for game in games %}
 
 	<div class="col s12 m4">
-		<div class="card blue-grey darken-1">
+		<div class="card blue-grey darken-1 center">
 			<div class="card-content white-text">
-				<span class="card-title">
+				<div class="game_img">
                   <img src = "{{game.image}}" width="300" height = "400" />
+                </div>
+                <div class="game_name">
                   <h4>
-                    <i class="material-icons">videogame_asset</i>
+                    <i class="fas fa-gamepad"></i>
                     {{game.game_name}}
                   </h4>
-                </span>
+                </div>
 				<div class="publisher">
-				  <h6>Publisher: {{game.publisher}}</h6>
+				  <h6>
+                    <i class="fas fa-cogs"></i>
+                    Publisher: {{game.publisher}}</h6>
 				</div>
                 <div class="year">
                   <h6>
-                    <i class="material-icons">calendar_today</i>
+                    <i class="fas fa-calendar-day"></i>
                     Release Year: {{game.release_year}}
                   </h6>
                 </div>
                 <div class="genre">
-                  <h6>Genre: {{game.genre}}</h6>
+                  <h6>
+                    <i class="far fa-question-circle"></i>
+                    Genre: {{game.genre}}</h6>
                 </div>
                 <div class="platform">
-                <i class="fas fa-tv"></i>
-                  <h6>Platform Used: {{game.platform_name}}</h6>
+                  <h6>
+                    <i class="fas fa-tv"></i>
+                    Platform Used: {{game.platform_name}}
+                  </h6>
                 </div>
                 <div class="multiplayer">
-                  <h6>Is Multiplayer? {{game.multiplayer}}</h6>
+                  <h6>
+                    <i class="far fa-question-circle"></i>
+                    Local Multiplayer? {{game.multiplayer}}
+                  </h6>
                 </div>
                 <div class="rating">
-                  <h6> Rating (/10): {{game.rating}}</h6>
+                  <h6> 
+                    <i class="far fa-star"></i>
+                    Rating (/10): {{game.rating}}
+                  </h6>
                 </div>
                 <div class="description">
+                <h6 class="center">Overview</h6>
 			      <p>{{game.description}}</p>
                 </div>
 			</div>
