--- a/templates/games.html
+++ b/templates/games.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="multiplayer">
                   <h6>
-                    <i class="far fa-question-circle"></i>
+                    <i class="fas fa-gamepad"></i>
                     Local Multiplayer? {{game.multiplayer}}
                   </h6>
                 </div>
