--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -7,14 +7,34 @@
     <form action = "" method = "POST" class="col s12">
       <div class="row">
         <div class="input-field col s12">
-          <i class="material-icons prefix">account_circle</i>
-          <input id="icon_prefix" type="text" class="validate">
-          <label for="icon_prefix">First Name</label>
+          <i class="material-icons prefix">videogame_asset</i>
+          <input name = "game_name" id="game_name" type="text" class="validate">
+          <label for="icon_prefix">Title of Game</label>
+        </div><!--game_name-->
+        <div class="input-field col s12">
+          <i class="fa fa-cogs prefix" aria-hidden="true"></i>
+          <input id="publisher" name="publisher" type="text" class="validate">
+          <label for="icon_telephone">Publisher</label>
+        </div><!--publisher-->
+        <div class="input-field col s12" id="calender">
+          <i class="material-icons prefix">today</i>
+          <input id="due_date" name="due_date" type="text" class="datepicker">
+          <label for="icon_prefix">Due Date</label>
         </div>
         <div class="input-field col s12">
-          <i class="material-icons prefix">phone</i>
-          <input id="icon_telephone" type="tel" class="validate">
-          <label for="icon_telephone">Telephone</label>
+          <i class="fa fa-cogs prefix" aria-hidden="true"></i>
+          <input id="publisher" name="publisher" type="tel" class="validate">
+          <label for="icon_telephone">Publisher</label>
+        </div>
+        <div class="input-field col s12">
+          <i class="fa fa-cogs prefix" aria-hidden="true"></i>
+          <input id="publisher" name="publisher" type="tel" class="validate">
+          <label for="icon_telephone">Publisher</label>
+        </div>
+        <div class="input-field col s12">
+          <i class="fa fa-cogs prefix" aria-hidden="true"></i>
+          <input id="publisher" name="publisher" type="tel" class="validate">
+          <label for="icon_telephone">Publisher</label>
         </div>
       </div>
     </form>
