form completed for addreview.html

--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -9,33 +9,43 @@
         <div class="input-field col s12">
           <i class="material-icons prefix">videogame_asset</i>
           <input name = "game_name" id="game_name" type="text" class="validate">
-          <label for="icon_prefix">Title of Game</label>
+          <label for="game_name">Title of Game</label>
         </div><!--game_name-->
         <div class="input-field col s12">
           <i class="fa fa-cogs prefix" aria-hidden="true"></i>
           <input id="publisher" name="publisher" type="text" class="validate">
-          <label for="icon_telephone">Publisher</label>
+          <label for="publisher">Publisher</label>
         </div><!--publisher-->
         <div class="input-field col s12" id="calender">
           <i class="material-icons prefix">today</i>
-          <input id="due_date" name="due_date" type="text" class="datepicker">
-          <label for="icon_prefix">Due Date</label>
-        </div>
+          <input id="release" name="release" type="text" class="datepicker">
+          <label for="release">Release Date</label>
+        </div><!--release-->
         <div class="input-field col s12">
-          <i class="fa fa-cogs prefix" aria-hidden="true"></i>
-          <input id="publisher" name="publisher" type="tel" class="validate">
-          <label for="icon_telephone">Publisher</label>
-        </div>
+          <i class="far fa-question-circle prefix"></i>
+          <input id="genre" name="genre" type="text" class="validate">
+          <label for="genre">Genre</label>
+        </div><!--genre-->
         <div class="input-field col s12">
-          <i class="fa fa-cogs prefix" aria-hidden="true"></i>
-          <input id="publisher" name="publisher" type="tel" class="validate">
-          <label for="icon_telephone">Publisher</label>
-        </div>
+          <i class="fas fa-tv prefix"></i>
+          <input id="platform" name="platform" type="text" class="validate">
+          <label for="platform">Platform</label>
+        </div><!--platform-->
         <div class="input-field col s12">
-          <i class="fa fa-cogs prefix" aria-hidden="true"></i>
-          <input id="publisher" name="publisher" type="tel" class="validate">
-          <label for="icon_telephone">Publisher</label>
-        </div>
+          <i class="fas fa-gamepad prefix"></i>
+          <input id="multiplayer" name="multiplayer" type="text" class="validate">
+          <label for="multiplayer">Multiplayer?</label>
+        </div><!--multiplayer-->
+         <div class="input-field col s12">
+          <i class="far fa-star prefix"></i>
+          <input id="rating" name="rating" type="text" class="validate">
+          <label for="rating">Rating(/10)</label>
+         </div><!--rating-->
+         <div class="input-field col s12">
+           <i class="material-icons prefix">create</i>
+           <textarea name="description" id="description" class="materialize-textarea"></textarea>
+           <label for="description">Game Description</label>
+         </div><!--description-->
       </div>
     </form>
   </div>
