--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     document.getElementById("calender").addEventListener("click", function(e) {
 	e.stopPropagation();
 });
-  $("select").addEventListener("click", function(e) {
+  document.getElementById("multiplayer").addEventListener("click", function(e) {
 	e.stopPropagation();
 });
     </script>
