--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
   document.getElementById("multiplayer").addEventListener("click", function(e) {
 	e.stopPropagation();
 });
+  document.getElementById("platform").addEventListener("click", function(e) {
+	e.stopPropagation();
+});
     </script>
   </body>
 </html>
