rating section of form now linking to options from mongo db

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
   document.getElementById("multiplayer").addEventListener("click", function(e) {
 	e.stopPropagation();
 });
-  document.getElementById("platform").addEventListener("click", function(e) {
+  document.getElementById("list").addEventListener("click", function(e) {
 	e.stopPropagation();
 });
     </script>
