--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -5,61 +5,82 @@
 
 <div class="row">
     <form action = "" method = "POST" class="col s12">
-      <div class="row">
+      <div class="row">   
         <div class="input-field col s12">
           <i class="material-icons prefix">videogame_asset</i>
           <input name = "game_name" id="game_name" type="text" class="validate">
           <label for="game_name">Title of Game</label>
-        </div><!--game_name-->
+        </div>
+      </div><!--game_name-->
+      <div class="row">
         <div class="input-field col s12">
           <i class="fa fa-cogs prefix" aria-hidden="true"></i>
           <input id="publisher" name="publisher" type="text" class="validate">
           <label for="publisher">Publisher</label>
-        </div><!--publisher-->
+        </div>
+      </div><!--publisher-->
+      <div class="row">
         <div class="input-field col s12" id="calender">
           <i class="material-icons prefix">today</i>
           <input id="release" name="release" type="text" class="datepicker">
           <label for="release">Release Date</label>
-        </div><!--release-->
+        </div>
+      </div><!--release-->
+      <div class="row">
         <div class="input-field col s12">
           <i class="far fa-question-circle prefix"></i>
           <input id="genre" name="genre" type="text" class="validate">
           <label for="genre">Genre</label>
-        </div><!--genre-->
-        <div class="row" id="platform">
-          <div class="input-field col s12">
-            <i class="fas fa-tv prefix"></i>
-              <select id="platform" name="platform" multiple>
-                  <option value="" disabled selected>Choose Platform</option>
-                  {% for platform in platforms %}
-                  <option value="{{platform.platform_name}}">{{platform.platform_name}}</option>
+        </div>
+      </div> <!--genre-->
+      <div class="row" id="list">
+        <div class="input-field col s12">
+          <i class="fas fa-tv prefix"></i>
+          <select id="platform" name="platform" multiple>
+            <option value="" disabled selected>Choose Platform</option>
+            {% for platform in platforms %}
+            <option value="{{platform.platform_name}}">{{platform.platform_name}}</option>
                   {% endfor %}
-              </select>
-              <label>Choose Platform</label>
-          </div>
-        </div><!--platform-->
-        <div class="row">
-        <div class="input-field col s12" id="multiplayer">
-          <i class="fas fa-gamepad prefix"></i>
-          <select id="multiplayer" name="multiplayer">
-            <option value="" disabled selected>Select One</option>
-            <option value="multiplayer_yes">Yes</option>
-            <option value="multiplayer_no">No</option>
           </select>
-          <label>Local Multiplayer?</label>
-          </div>
-        </div><!--multiplayer-->
-         <div class="input-field col s12">
-          <i class="far fa-star prefix"></i>
-          <input id="rating" name="rating" type="text" class="validate">
-          <label for="rating">Rating(/10)</label>
-         </div><!--rating-->
+          <label>Choose Platform</label>
+        </div>
+     </div><!--platform-->
+     <div class="row">
+       <div class="input-field col s12" id="multiplayer">
+         <i class="fas fa-gamepad prefix"></i>
+           <select id="multiplayer" name="multiplayer">
+             <option value="" disabled selected>Select One</option>
+             <option value="multiplayer_yes">Yes</option>
+             <option value="multiplayer_no">No</option>
+           </select>
+           <label>Local Multiplayer?</label>
+       </div>
+     </div><!--multiplayer-->
+     <div class="row" id="list">>
+       <div class="input-field col s12">
+         <i class="far fa-star prefix"></i>
+         <select id="platform" name="platform">
+           <option value="" disabled selected>Rating</option>
+           {% for rate in ratings %}
+           <option value="{{rate.rating}}">{{rate.rating}}</option>
+           {% endfor %}
+          </select>
+          <label>Game Rating</label>
+        </div>
+      </div><!--rating-->
          <div class="input-field col s12">
            <i class="material-icons prefix">create</i>
            <textarea name="description" id="description" class="materialize-textarea"></textarea>
            <label for="description">Game Description</label>
          </div><!--description-->
-      </div>
+          <div class="input-field col s12">
+          <i class="material-icons prefix">add_photo_alternate</i>
+          <input name = "image" id="image" type="text" class="validate">
+          <label for="image">Game Image: Paste an image URL here for the Game if Available (Confused? Use Google Images to easily find an image)</label>
+        </div>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <i class="material-icons right">send</i>
+      </button>
     </form>
   </div>
 {% endblock %}
