--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -4,7 +4,7 @@
 <h3 class = "center">Add a Game Review</h3>
 
 <div class="row">
-    <form action = "" method = "POST" class="col s12">
+    <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
       <div class="row">   
         <div class="input-field col s12">
           <i class="material-icons prefix">videogame_asset</i>
@@ -50,8 +50,8 @@
          <i class="fas fa-gamepad prefix"></i>
            <select id="multiplayer" name="multiplayer">
              <option value="" disabled selected>Select One</option>
-             <option value="multiplayer_yes">Yes</option>
-             <option value="multiplayer_no">No</option>
+             <option value="yes">Yes</option>
+             <option value="no">No</option>
            </select>
            <label>Local Multiplayer?</label>
        </div>
@@ -68,19 +68,25 @@
           <label>Game Rating</label>
         </div>
       </div><!--rating-->
-         <div class="input-field col s12">
-           <i class="material-icons prefix">create</i>
-           <textarea name="description" id="description" class="materialize-textarea"></textarea>
-           <label for="description">Game Description</label>
-         </div><!--description-->
-          <div class="input-field col s12">
+      <div class="row">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">create</i>
+          <textarea name="description" id="description" class="materialize-textarea"></textarea>
+          <label for="description">Game Description</label>
+        </div>
+      </div><!--description-->
+      <div class="row">
+        <div class="input-field col s12">
           <i class="material-icons prefix">add_photo_alternate</i>
           <input name = "image" id="image" type="text" class="validate">
           <label for="image">Game Image: Paste an image URL here for the Game if Available (Confused? Use Google Images to easily find an image)</label>
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-        <i class="material-icons right">send</i>
-      </button>
+      </div>
+      <div class="row">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Add Review
+          <i class="material-icons right">add</i>
+        </button>
+      </div><!--button-->
     </form>
   </div>
 {% endblock %}
