--- a/templates/games.html
+++ b/templates/games.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% for game in games %}
 <div class="row">
-	<div class="col s12 m4">
+	<div class="col s12 m12">
 		<div class="card blue-grey darken-1 center">
 			<div class="card-content white-text">
 				<div class="game_img">
@@ -54,7 +54,9 @@
                 </div>
 			</div>
 			<div class="card-action">
-				<a href="#"><button>Edit Game Details</button></a>
+			  <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn edit_btn ">
+                <i class="material-icons">games</i>
+                Edit Review</a>
 			</div>
 		</div>
 	</div>
