--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -16,7 +16,7 @@
         <div class="input-field col s12">
           <i class="fa fa-cogs prefix" aria-hidden="true"></i>
           <input id="publisher" name="publisher" type="text" class="validate">
-          <label for="publisher">Publisher</label>
+          <label for="publisher">Developer(s)</label>
         </div>
       </div><!--publisher-->
       <div class="row">
