--- a/templates/games.html
+++ b/templates/games.html
@@ -33,7 +33,7 @@
                 <div class="platform">
                   <h6>
                     <i class="fas fa-tv"></i>
-                    Platform Used: {{game.platform_name}}
+                    Platform Used: {{game.platform}}
                   </h6>
                 </div>
                 <div class="multiplayer">
