rating showing on games.html page

--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -59,7 +59,7 @@
      <div class="row" id="list">>
        <div class="input-field col s12">
          <i class="far fa-star prefix"></i>
-         <select id="platform" name="platform">
+         <select id="rating" name="rating">
            <option value="" disabled selected>Rating</option>
            {% for rate in ratings %}
            <option value="{{rate.rating}}">{{rate.rating}}</option>
