--- a/templates/games.html
+++ b/templates/games.html
@@ -22,7 +22,7 @@
                 <div class="year">
                   <h6>
                     <i class="fas fa-calendar-day"></i>
-                    Release Year: {{game.release_year}}
+                    Release Date: {{game.release}}
                   </h6>
                 </div>
                 <div class="genre">
@@ -45,11 +45,11 @@
                 <div class="rating">
                   <h6> 
                     <i class="far fa-star"></i>
-                    Rating (/10): {{game.rating}}
+                    Rating: {{game.rating}}
                   </h6>
                 </div>
                 <div class="description">
-                <h6 class="center">Overview</h6>
+                <h5 class="center">Overview</h6>
 			      <p>{{game.description}}</p>
                 </div>
 			</div>
