--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -39,7 +39,8 @@
           <select id="platform" name="platform" multiple>
             <option value="" disabled selected>Choose Platform</option>
             {% for platform in platforms %}
-            {% if platform.platform_name == game.platform_name %}
+            
+            {% if platform.platform_name == game.platform %}
             <option value="{{platform.platform_name}}"selected>{{platform.platform_name}}</option>
             {% else %}
             <option value="{{platform.platform_name}}">{{platform.platform_name}}</option>
