edit review form returning as completed form

--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -8,28 +8,28 @@
       <div class="row">   
         <div class="input-field col s12">
           <i class="material-icons prefix">videogame_asset</i>
-          <input name = "game_name" id="game_name" type="text" class="validate">
+          <input name = "game_name" id="game_name" type="text" class="validate" value="{{game.game_name}}">
           <label for="game_name">Title of Game</label>
         </div>
       </div><!--game_name-->
       <div class="row">
         <div class="input-field col s12">
           <i class="fa fa-cogs prefix" aria-hidden="true"></i>
-          <input id="publisher" name="publisher" type="text" class="validate">
+          <input id="publisher" name="publisher" type="text" class="validate" value="{{game.publisher}}">
           <label for="publisher">Developer(s)</label>
         </div>
       </div><!--publisher-->
       <div class="row">
         <div class="input-field col s12" id="calender">
           <i class="material-icons prefix">today</i>
-          <input id="release" name="release" type="text" class="datepicker">
+          <input id="release" name="release" type="text" class="datepicker" value="{{game.release}}">
           <label for="release">Release Date</label>
         </div>
       </div><!--release-->
       <div class="row">
         <div class="input-field col s12">
           <i class="far fa-question-circle prefix"></i>
-          <input id="genre" name="genre" type="text" class="validate">
+          <input id="genre" name="genre" type="text" class="validate" value="{{game.genre}}">
           <label for="genre">Genre</label>
         </div>
       </div> <!--genre-->
@@ -54,8 +54,13 @@
          <i class="fas fa-gamepad prefix"></i>
            <select id="multiplayer" name="multiplayer">
              <option value="" disabled selected>Select One</option>
-             <option value="yes">Yes</option>
-             <option value="no">No</option>
+             {% if game.multiplayer == "Yes" %}
+             <option value="Yes" selected>Yes</option>
+             <option value="No">No</option>
+             {% else %}
+             <option value="Yes">Yes</option>
+             <option value="No"selected>No</option>
+             {% endif %}
            </select>
            <label>Local Multiplayer?</label>
        </div>
@@ -79,14 +84,16 @@
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">create</i>
-          <textarea name="description" id="description" class="materialize-textarea"></textarea>
+          <textarea name="description" id="description" class="materialize-textarea">
+            {{game.description}}
+          </textarea>
           <label for="description">Game Description</label>
         </div>
       </div><!--description-->
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">add_photo_alternate</i>
-          <input name = "image" id="image" type="text" class="validate">
+          <input name = "image" id="image" type="text" class="validate" value = "{{game.image}}">
           <label for="image">Game Image: Paste an image URL here for the Game if Available (Confused? Use Google Images to easily find an image)</label>
         </div>
       </div>
