--- a/templates/games.html
+++ b/templates/games.html
@@ -19,7 +19,7 @@
                     <i class="fas fa-cogs"></i>
                     Publisher: {{game.publisher}}</h6>
 				</div>
-                <div class="year">
+                <div class="date">
                   <h6>
                     <i class="fas fa-calendar-day"></i>
                     Release Date: {{game.release}}
