--- a/templates/games.html
+++ b/templates/games.html
@@ -57,6 +57,9 @@
 			  <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn edit_btn ">
                 <i class="material-icons">games</i>
                 Edit Review</a>
+              <a href="{{url_for('delete_review', game_id=game._id)}}"class="waves-effect waves-light btn edit_btn ">
+                <i class="material-icons">games</i>
+                Delete Review</a>
 			</div>
 		</div>
 	</div>
