--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -4,7 +4,7 @@
 <h3 class = "center">Edit Review</h3>
 
 <div class="row">
-    <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
+    <form action = "{{url_for('update_review', game_id=game._id)}}" method = "POST" class="col s12">
       <div class="row">   
         <div class="input-field col s12">
           <i class="material-icons prefix">videogame_asset</i>
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="row">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Add Review
+        <button class="btn waves-effect waves-light" type="submit" name="action">Edit Review
           <i class="material-icons right">add</i>
         </button>
       </div><!--button-->
