--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
-.edit_btn {
-    line-height: 24px;
-    margin: 5px;
-    padding: 5;
+body {
+    background: linear-gradient(rgb(199, 199, 199), rgb(169, 169, 177));
 }
+
+
