--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -8,7 +8,7 @@
       <div class="row">   
         <div class="input-field col s12">
           <i class="material-icons prefix">videogame_asset</i>
-          <input name = "game_name" id="game_name" type="text" class="validate">
+          <input name = "game_name" id="game_name" type="text" class="validate" required>
           <label for="game_name">Title of Game</label>
         </div>
       </div><!--game_name-->
