homepage background image added

--- a/templates/games.html
+++ b/templates/games.html
@@ -5,9 +5,9 @@
     {% for game in games %}
       <li>
         <div class="collapsible-header">
-          <div class="col s12">
+          <div class="accord_top">
             <i class="material-icons">expand_more</i>
-            {{game.game_name}} - {{game.rating}}
+            {{game.game_name}} - Rating: {{game.rating}}
           </div>
         </div><!--Game Name & Rating-->
       <div class="collapsible-body">
