--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,10 @@
-body {
-    background: linear-gradient(rgb(199, 199, 199), rgb(169, 169, 177));
+.index {
+  height: 100%;
+  width: 100%;
+  background-image: url("../img/ms3bg.jpeg");
+ 
+  
 }
+
 
 
