--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="index">
-<div class="row">
-<div class="col s12">
-
-</div>
-</div>
+  <div class="row overlay">
+      <a href="{{url_for('view_games')}}"class="waves-effect waves-light btn view_btn">
+              <i class="material-icons">remove_red_eye</i><br>
+              View Game Reviews
+            </a><!--View Reviews Button--> 
+      <a href="{{url_for('view_games')}}"class="waves-effect waves-light btn add_btn">
+              <i class="material-icons">add</i><br>
+              Add a Game Review
+            </a><!--Add Review Button--> 
+  </div>
 </div>
 {% endblock %}
