--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,43 +4,73 @@
   background-image: url("../img/indexbg.png");
   background-position: center center;
   background-size: cover;
-  position: relative;
  }/*Index.html background*/
 
  .view_btn {
      background-color: red;
-     height: 100px;
-     width: 200px;
+     text-align: center;
+     height: 300px;
+     width: 400px;
+     font-size: 40px;
      margin-left: 25px;
-     margin-top: 400px;
+     margin-top: 300px;
      padding: 5px;
      float: left;
+     border-radius: 50%;
  }/*View button height,padding,margins and color*/
 
   .add_btn {
      background-color: red;
-     height: 100px;
-     width: 200px;
+     height: 300px;
+     width: 400px;
+     font-size: 40px;
      margin-right: 25px;
-     margin-top: 400px;
+     margin-top: 300px;
      padding: 5px;
      float: right;
+     border-radius: 50%;
  }
 
  .view_btn i, .add_btn i {
      font-size: 60px;
      padding: 10px;
  }
+ 
 
  /*OverLay for Background Images*/
  .overlay {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(29, 28, 28, 0.5);
   top: 0;
   bottom: 0;
-  }
+  text-align: center;
+  }/*OverLay for Background Images*/
+
+/*Add/Edit Form Styling*/
+ form {
+     background-color: black;
+     color: white;
+     border-radius: 2%;
+ }
+
+ form .addreview{
+     color: white;
+     border: 2px solid white;
+     text-align: center;
+     width: 20%;
+     margin-left: 40%;
+     margin-right: 40%;
+ }/* font color,border,text aligning and button positioning for form*/
+
+ .form-bg {
+     background:linear-gradient(rgb(245, 101, 101), rgb(243, 101, 6));
+     color: white;
+ }/* red color behind the form */
+
+
+
 
 
 
