--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h3 class = "center">Add a Game Review</h3>
-
+<div class = "form-bg">
+<h1 class = "center">Add a Game Review</h1>
+<div class="container">
 <div class="row">
     <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
       <div class="row">   
@@ -56,7 +56,7 @@
            <label>Local Multiplayer?</label>
        </div>
      </div><!--multiplayer-->
-     <div class="row" id="list">>
+     <div class="row" id="list">
        <div class="input-field col s12">
          <i class="far fa-star prefix"></i>
          <select id="rating" name="rating">
@@ -79,14 +79,17 @@
         <div class="input-field col s12">
           <i class="material-icons prefix">add_photo_alternate</i>
           <input name = "image" id="image" type="text" class="validate">
-          <label for="image">Game Image: Paste an image URL here for the Game if Available (Confused? Use Google Images to easily find an image)</label>
+          <label for="image">Game Screenshot(Confused? Use Google Images to find an image)</label>
         </div>
       </div>
-      <div class="row">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Add Review
+      <div class="row center_btn">
+        <button class="btn waves-effect waves-light addreview" type="submit" name="action" white>Add Review
           <i class="material-icons right">add</i>
         </button>
       </div><!--button-->
     </form>
+  </div>
+  </div>
+  </div>
   </div>
 {% endblock %}
