--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<div class="form-bg">
 <h3 class = "center">Edit Review</h3>
-
+<div class="container">
 <div class="row">
     <form action = "{{url_for('update_review', game_id=game._id)}}" method = "POST" class="col s12">
       <div class="row">   
@@ -94,7 +94,7 @@
         <div class="input-field col s12">
           <i class="material-icons prefix">add_photo_alternate</i>
           <input name = "image" id="image" type="text" class="validate" value = "{{game.image}}">
-          <label for="image">Game Image: Paste an image URL here for the Game if Available (Confused? Use Google Images to easily find an image)</label>
+          <label for="image">Game Screenshot(Confused? Use Google Images to find an image)</label>
         </div>
       </div>
       <div class="row">
@@ -103,5 +103,7 @@
         </button>
       </div><!--button-->
     </form>
+  </div>
+  </div>
   </div>
 {% endblock %}
