--- a/templates/games.html
+++ b/templates/games.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row">
+<div class="container">
   <ul class="collapsible">
     {% for game in games %}
       <li>
@@ -52,5 +52,6 @@
     </li>
     {% endfor %}
   </ul>
-</row>
+
+</div>
 {% endblock %}
