add platform functionality working

--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -82,7 +82,7 @@
           <label for="image">Game Screenshot(Confused? Use Google Images to find an image)</label>
         </div>
       </div>
-      <div class="row center_btn">
+      <div class="row">
         <button class="btn waves-effect waves-light addreview" type="submit" name="action" white>Add Review
           <i class="material-icons right">add</i>
         </button>
