--- a/templates/addplatform.html
+++ b/templates/addplatform.html
@@ -5,14 +5,19 @@
   <h2 class = "center">Cant find the right console to select?Add your console here
   <div class="container">
     <div class="row">
-      <form action = "{{url_for('update_review', game_id=game._id)}}" method = "POST" class="col s12">
+      <form action = "{{url_for('insert_platform')}}" method = "POST" class="col s12">
         <div class="row">   
           <div class="input-field col s12">
             <i class="material-icons prefix">videogame_asset</i>
-            <input name = "game_name" id="game_name" type="text" class="validate" value="{{game.game_name}}">
-            <label for="game_name">Title of Game</label>
+            <input name = "platform_name" id="platform_name" type="text" class="validate" value="">
+            <label for="game_name">Add your Platform</label>
           </div>
         </div><!--game_name-->
+        <div class="row">
+          <button class="btn waves-effect waves-light" type="submit" name="action" white>Add Platform
+            <i class="material-icons right">add</i>
+          </button>
+        </div><!--button-->
       </form>
     </div>
   </div>
