--- a/templates/addplatform.html
+++ b/templates/addplatform.html
@@ -14,7 +14,7 @@
           </div>
         </div><!--game_name-->
         <div class="row">
-          <button class="btn waves-effect waves-light" type="submit" name="action" white>Add Platform
+          <button class="btn waves-effect waves-light form-center-button" type="submit" name="action" white>Add Platform
             <i class="material-icons right">add</i>
           </button>
         </div><!--button-->
