--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="row">
-        <button class="btn waves-effect waves-light addreview" type="submit" name="action" white>Add Review
+        <button class="btn waves-effect waves-light form-center-button" type="submit" name="action" white>Add Review
           <i class="material-icons right">add</i>
         </button>
       </div><!--button-->
