width changed for game screenshot image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,8 @@ form .form-center-button{
 
  .collapsible-body .game_img {
      border: 1px solid white;
+     width: 365px;
+     padding: 3px;
  }
 
 .collapsible-body a {
