--- a/templates/games.html
+++ b/templates/games.html
@@ -10,7 +10,7 @@
         </div><!--Game Name & Rating-->
       <div class="collapsible-body">
         <div class="game_img">
-          <img src = "{{game.image}}" />
+          <img src = "{{game.image}}" height="180px" width="360px"/>
         </div><!--Game Image first in accordian body-->
         <div class="publisher">
           <i class="fas fa-cogs"></i>
