navbar added, styled to be black in color,white text and responsive

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,6 +91,15 @@ form .form-center-button{
     text-align: center;
 }
 
+h1 {
+    color: white;
+    text-align: center;
+}
+
+#mobile-demo li a {
+    color: white;
+}
+
 
 
 
