--- a/templates/games.html
+++ b/templates/games.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<h1>All Game Reviews</h1>
 <div class="container">
   <ul class="collapsible">
     {% for game in games %}
