--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class = "form-bg">
-<h1 class = "center">Add a Game Review</h1>
+<h1>Add a Game Review</h1>
 <div class="container">
 <div class="row">
     <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
