--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="form-bg">
-<h1 class = "center">Edit Review</h1>
+<h1>Edit Review</h1>
 <div class="container">
 <div class="row">
     <form action = "{{url_for('update_review', game_id=game._id)}}" method = "POST" class="col s12">
