--- a/templates/addplatform.html
+++ b/templates/addplatform.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="form-bg">
   <h1 class = "center">Add a Gaming Platform</h1>
-  <h2 class = "center">Cant find the right console to select?Add your console here
+  <h2>Cant find the right console to select?Add your console here</h2>
   <div class="container">
     <div class="row">
       <form action = "{{url_for('insert_platform')}}" method = "POST" class="col s12">
