--- a/templates/games.html
+++ b/templates/games.html
@@ -3,21 +3,23 @@
 <h1>All Game Reviews</h1>
 <div class="container">
   <div class="row">
-  <div class="col s12">
-  <ul class="collapsible">
-    {% for game in games %}
-      <li>
-        <div class="collapsible-header">
-        
+    <div class="col s12">
+      <ul class="collapsible">
+      {% for game in games %}
+        <li>
+          <div class="collapsible-header">
             <i class="material-icons">expand_more</i>
             <div class="col s12">
-            {{game.game_name}}<br> Rating: {{game.rating}}
-        </div>
-        </div><!--Game Name & Rating-->
-      <div class="collapsible-body">
-        <div class="game_img">
-          <img src = "{{game.image}}" height="180px" width="360px"/>
-        </div><!--Game Image first in accordian body-->
+              {{game.game_name}}<br> Rating: {{game.rating}}
+            </div>
+          </div><!--Game Name & Rating-->
+          <div class="collapsible-body">
+             <div class="col s12">
+            <div class="game_img ">
+             <img src = "{{game.image}}" >
+              </div>
+            </div><!--Game Image first in accordian body-->
+        
         <div class="publisher">
           <i class="fas fa-cogs"></i>
           <strong>Publisher:</strong> {{game.publisher}}
