--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div class = "form-bg">
 <h1>Add a Game Review</h1>
+<h2>If you cant find your platform listed, you can add a new platform to our collection by clicking 'Add Platform' at the top of the page</h2>
 <div class="container">
 <div class="row">
     <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
