icons updated for games.html buttons

--- a/templates/games.html
+++ b/templates/games.html
@@ -46,11 +46,11 @@
           </div><!--Description seventh in accordian body-->
           <div class="buttons">
             <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn edit_btn ">
-              <i class="material-icons">games</i>
+              <i class="material-icons">edit</i>
               Edit Review
             </a><!--Edit Review Button-->  
             <a href="{{url_for('delete_review', game_id=game._id)}}"class="waves-effect waves-light btn edit_btn ">
-              <i class="material-icons">games</i>
+              <i class="material-icons">delete</i>
               Delete Review
             </a><!--Delete Review Button--> 
           </div><!--Edit and Delete Review Buttons-->    
