--- a/templates/games.html
+++ b/templates/games.html
@@ -45,11 +45,11 @@
 		    <p>{{game.description}}</p>
           </div><!--Description seventh in accordian body-->
           <div class="buttons">
-            <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn edit_btn ">
+            <a href="{{url_for('edit_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn">
               <i class="material-icons">edit</i>
               Edit Review
             </a><!--Edit Review Button-->  
-            <a href="{{url_for('delete_review', game_id=game._id)}}"class="waves-effect waves-light btn edit_btn ">
+            <a href="{{url_for('delete_review', game_id=game._id)}}"class="waves-effect waves-light btn game-btn ">
               <i class="material-icons">delete</i>
               Delete Review
             </a><!--Delete Review Button--> 
