--- a/templates/addplatform.html
+++ b/templates/addplatform.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="form-bg">
   <h1 class = "center">Add a Gaming Platform</h1>
-  <h2>Cant find the right console to select?Add your console here</h2>
+  <h2>Cant find the right console to select? Add your console here</h2>
   <div class="container">
     <div class="row">
       <form action = "{{url_for('insert_platform')}}" method = "POST" class="col s12">
@@ -14,7 +14,7 @@
           </div>
         </div><!--game_name-->
         <div class="row">
-          <button class="btn waves-effect waves-light form-center-button" type="submit" name="action" white>Add Platform
+          <button class="btn waves-effect waves-light form-center-button center-button" type="submit" name="action" white>Add Platform
             <i class="material-icons right">add</i>
           </button>
         </div><!--button-->
