--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -34,7 +34,7 @@
       <div class="row" id="list">
         <div class="input-field col s12">
           <i class="fas fa-tv prefix"></i>
-          <select id="platform" name="platform" multiple>
+          <select id="platform" name="platform">
             <option value="" disabled selected>Choose Platform</option>
             {% for platform in platforms %}
               {% if platform.platform_name == game.platform %}
@@ -96,8 +96,8 @@
         </div>
       </div>
       <div class="row">
-        <button class="btn waves-effect waves-light form-center-button" type="submit" name="action">Edit Review
-          <i class="material-icons right">add</i>
+        <button class="btn waves-effect waves-light center-button" type="submit" name="action">Edit Review
+          <i class="material-icons right">edit</i>
         </button>
       </div><!--button-->
     </form>
